# ioTank-Android

./: README.md
ioTankFlasher/: build.gradle
ioTankFlasher/app/: CMakeLists.txt  build.gradle
ioTankFlasher/app/libs/usb-serial-for-android/: build.gradle
ioTankFlasher/app/libs/usb-serial-for-android/usbSerialForAndroid/: build.gradle
ioTankFlasher/app/release/: output.json
ioTankFlasher/app/src/androidTest/java/com/objectsyndicate/iotankflasher/: ExampleInstrumentedTest.kt
ioTankFlasher/app/src/main/: AndroidManifest.xml
ioTankFlasher/app/src/main/cpp/: main.cpp  native-lib.cpp
ioTankFlasher/app/src/main/java/com/objectsyndicate/iotankflasher/: ByteArray.kt  MainActivity.kt  String.kt  swap.java
ioTankFlasher/app/src/main/res/layout/: activity_main.xml
ioTankFlasher/app/src/main/res/values/: strings.xml
ioTankFlasher/app/src/test/java/com/objectsyndicate/iotankflasher/: ExampleUnitTest.kt
ioTankFlasher/gradle/wrapper/: gradle-wrapper.properties
